--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Node.js on Azure Template</title>
+    <meta charset="utf-8">
+    <title>Jahi Stewart's Getting to Know Eachother</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
 </head>
-<body>
-	<h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
-	<p>This repository is a template that can be used to create a Node.js and Express website for hosting on Microsoft 
-	Azure.</p>
+<body class="backgroudimage"> <!--Art I made myself!-->
+    <h2>Jahi Stewart</h2>
+    <div>
+        <a href="mailto:jahikstewart@lewisu.edu">This is my email</a>
+        <p>Discord: Jahi#3586</p>
+    </div>
+    <section>
+        <img src="profile.jpg" class="profile" alt="Profile">
+        <div>
+            <h3>Introduction</h3>
+            <p class="ex1">
+                &emsp; I am Jahi Stewart, a senior, and the reason I became a Computer Science major is because I really love diving into complex problems or tweaking programs to make them work even better. Currently I work as an IT student worker and mainly do password resets and troubleshoot software. I am the eldest of four.
+            </p>
+            <p class="ex1">
+                &emsp; I have no minor.
+            </p>
+        </div>
+        <div>
+            <h3>What I Hope to Learn in this Course</h3>
+            <ul>
+                <li>Firebase</li>
+                <li>React Native</li>
+                <li>Software Architecture</li>
+            </ul>
+        </div>
+        <div>
+            <h3>My Favorite Hobby</h3>
+            <p class="ex1">
+                &emsp;  My favorite hobby is playing video games and watching anime.
+            </p>
+        </div>
+        <div>
+            <h3>Fun Fact</h3>
+            <p class="ex1">
+                &emsp; I have a gray cat named Oscar.
+            </p>
+        </div>
+    </section>
+    <p id="sample"></p>
 </body>
-</html>
